public class CalabashBro extends Creature {
    
    CalabashBro(String _name, int _hp) {
        super(_name, _hp);
    }
}